--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
 
     <string name="scrub_empty">Tap and hold the graph to scrub.</string>
-    <string name="scrub_format">Scrubbing value: %1$s</string>
+    <string name="scrub_format">$ %1$s</string>
     <string name="randomize">Randomize</string>
     <string name="scrubbing_value">Scrubbing Value</string>
     <string name="online">ONLINE</string>
@@ -42,8 +42,7 @@
         Qui dicta minus molestiae vel beatae natus eveniet ratione temporibus aperiam
         harum alias officiis assumenda officia quibusdam deleniti eos cupiditate dolore doloribus!
     </string>
-
-
+    <string name="coinbase_excerpt">Founded in June of 2012, Coinbase is a digital currency wallet and platform where merchants and consumers can transact with new digital currencies like bitcoin, ethereum, and litecoin. We\'re based in San Francisco, California.</string>
 
 
 </resources>
